# kZero

./: Readme.md
python/lib/: games.py  loop.py  supervised.py
python/lib/data/: file.py
python/lib/layers/: attention.py  simple.py
python/lib/model/: attention.py  attention_block.py  lc0_pre_act.py  model_perceiver.py
python/main/: loop_main.py  loop_main_alpha.py  loop_main_mu.py  profile_loader.py  supervised_main.py  supervised_main_alpha.py  supervised_main_mu.py  train_supervised.py
python/quantized/: binary.py  mnist_main.py  quant_bits.py
rust/: Cargo.toml  kzero_log.txt  profile.txt
rust/alpha-zero/: Cargo.toml
rust/alpha-zero/src/: lib.rs  non_solve_zero.rs  zero.rs
rust/alpha-zero/src/network/: cpu.rs
rust/alpha-zero/src/selfplay/: commander.rs  generator.rs  server.rs
rust/alpha-zero/src/zero/: node.rs  step.rs  tree.rs
rust/cuda-nn-eval/: Cargo.toml
rust/cuda-nn-eval/cuda/kernels/: binary_conv.cu  gather.cu
rust/cuda-nn-eval/examples/: att_manual.rs  exp_kernel_test.rs  layernorm_grid.rs  layernorm_single.rs  unaligned_load.rs
rust/cuda-nn-eval/src/: executor.rs  lib.rs  planner.rs  tester.rs
rust/cuda-nn-eval/src/autokernel/: attention.cu  attention.rs  common.rs  layernorm.cu  layernorm.rs  mod.rs  oneflow_ln.cu  util.cu  welford.cu
rust/cuda-nn-eval/src/new_planner/: core.rs  mod.rs  node.rs  scalar_block.rs
rust/cuda-nn-eval/tests/root/: graphs.rs  graphs_optimizer.rs  graphs_simple.rs  katago.rs  mod.rs  runner.rs  tensor_utils.rs  welford.rs
rust/cuda-sys/src/wrapper/: group.rs  operation.rs
rust/cuda-sys/src/wrapper/rtc/: core.rs
rust/cuda-sys/tests/: fused.rs
rust/kz-core/: Cargo.toml
rust/kz-core/src/: bot.rs  lib.rs
rust/kz-core/src/mapping/: ataxx.rs  mod.rs
rust/kz-core/src/muzero/: node.rs  step.rs  tree.rs  wrapper.rs
rust/kz-core/src/network/: common.rs  cpu.rs  cudnn.rs  mod.rs  muzero.rs  prepared.rs
rust/kz-core/src/zero/: node.rs  step.rs  tree.rs  wrapper.rs
rust/kz-core/tests/: tree.rs
rust/kz-lichess/: Cargo.toml
rust/kz-misc/: Cargo.toml
rust/kz-misc/src/: lib.rs  muzero_debug.rs  visualize.rs
rust/kz-misc/src/convert/: pt_to_onnx.rs
rust/kz-misc/src/eval/: batch_tree_eval.rs  mod.rs  tournament.rs
rust/kz-selfplay/: Cargo.toml
rust/kz-selfplay/examples/: exp_gaps.rs  exp_start.rs
rust/kz-selfplay/src/: binary_output.rs
rust/kz-selfplay/src/server/: executor.rs  generator_muzero.rs  mod.rs  protocol.rs  rebatcher.rs  server.rs  server_alphazero.rs  server_muzero.rs
rust/kz-tui/: Cargo.toml
rust/kz-tui/src/: main.rs
rust/kz-util/src/: game.rs  lib.rs
rust/nn-eval-opencl/: Cargo.toml
rust/nn-eval-opencl/src/: main.rs
rust/nn-eval-opencl/src/kernels/: conv.cl
rust/nn-graph/: Cargo.toml
rust/nn-graph/src/: cpu.rs  graph.rs  katago.rs  lib.rs  optimizer.rs  shape.rs  visualize.rs  wrap_debug.rs
rust/nn-graph/src/onnx/: load.rs
rust/nn-graph/src/optimizer/: affine.rs  mod.rs
