[workspace]

members = [
    # general crates
    "pgn-reader",
    "licorice",
    # kZero-specific crates
    "kz-util",
    "kz-core",
    "kz-selfplay",
    "kz-lichess",
    "kz-misc",
]

[profile.release]
# lto = true
debug = true

# temporary fix until https://github.com/jordanbray/chess/pull/67 is merged
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3


# TODO try turning off default features
# TODO require features per-subcrate instead of here for all of them
# TODO use either flume or crossbeam, not both
# TODO get rid of criterion
# TODO replace chess with shakmaty everywhere
# TODO switch from serde to nanoserde or similar, we just want basic json deserialization
# TODO there are two different syn versions in the tree
# TODO update LRU once zero-capacity cache is allowed again https://github.com/jeromefroe/lru-rs/issues/165
# TODO update crossterm once double events are fixed https://github.com/crossterm-rs/crossterm/issues/772

[workspace.dependencies]
# path dependencies
kz-core = { path = "kz-core" }
kz-selfplay = { path = "kz-selfplay" }
kz-util = { path = "kz-util" }
licorice = { path = "licorice" }
pgn-reader = { path = "pgn-reader" }

# Kyanite subcrates
kn-graph = "0.2.1"
kn-cuda-sys = "0.2.1"
kn-cuda-eval = "0.2.1"

# crates.io depedencies
anyhow = "1.0.75"
async-trait = "0.1.73"
bindgen = "0.68.1"
board-game = "0.8.2"
buffered-reader = "1.2.0"
bytemuck = "1.14.0"
byteorder = "1.4.3"
bytes = "1.5.0"
bzip2 = "0.4.4"
cc = "1.0.83"
chrono = { version = "0.4.31" }
clap = { version = "4.4.5", features = ["derive"] }
criterion = "0.5.1"
crossbeam = "0.8.2"
crossterm = "0.27.0"
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
flume = "0.11.0"
futures = { version = "0.3.28", default-features = false, features = ["executor", "thread-pool"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
image = { version = "0.24.7", default-features = false, features = ["png"] }
indexmap = "2.0.0"
internal-iterator = "0.2.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
lru = "0.7.8" # stuck at old version due to not allowing empty caches any more
memchr = "2.6.3"
ndarray = "0.15.6"
num-traits = "0.2.16"
palette = { version = "0.7.3", default-features = false, features = ["std"] }
prost = "0.12.1"
prost-build = "0.12.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
reqwest = { version = "0.11.20" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.3.0" }
shakmaty = "0.26.0"
shakmaty-syzygy = "0.24.0"
structopt = "0.3.26"
superluminal-perf = "0.3.0"
tabled = "0.14.0"
tar = "0.4.40"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9" }
tui = "0.19.0"
unwrap-match = "0.1.0"
vampirc-uci = { version = "0.11.1", features = ["chess"] }
