[package]
name = "kz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game.workspace = true
kn-cuda-eval.workspace = true
kn-cuda-sys.workspace = true
kn-graph.workspace = true
kz-util.workspace = true

# TODO remove shakmaty and corresponding oracle
async-trait.workspace = true
crossbeam.workspace = true
decorum.workspace = true
flume.workspace = true
futures.workspace = true
internal-iterator.workspace = true
itertools.workspace = true
lazy_static.workspace = true
ndarray.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
shakmaty.workspace = true
shakmaty-syzygy.workspace = true
