[package]
name = "kz-lichess"
version = "0.1.0"
edition = "2021"

[dependencies]
board-game.workspace = true
kn-cuda-eval.workspace = true
kn-graph.workspace = true
kz-core.workspace = true
kz-selfplay.workspace = true

itertools.workspace = true
licorice.workspace = true
rand.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
