[package]
name = "kz-selfplay"
version = "0.1.0"
edition = "2021"

[features]
muzero = []
default = []

[dependencies]
board-game.workspace = true
kn-cuda-eval.workspace = true
kn-cuda-sys.workspace = true
kn-graph.workspace = true
kz-core.workspace = true
kz-util.workspace = true

bytemuck.workspace = true
clap.workspace = true
crossbeam.workspace = true
decorum.workspace = true
flume.workspace = true
futures.workspace = true
internal-iterator.workspace = true
itertools.workspace = true
lru.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
serde_json.workspace = true
superluminal-perf.workspace = true
